tests/libdef_scoped/libdef_scoped.exp
Error -------------------------------------------------------------------------------------------------- bar/test.js:1:1

Cannot cast `commonValueNoOverride` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   bar/test.js:1:1
   1| commonValueNoOverride as empty; // error: string ~> empty
      ^^^^^^^^^^^^^^^^^^^^^

References:
   common_lib.js:1:38
   1| declare const commonValueNoOverride: string;
                                           ^^^^^^ [1]
   bar/test.js:1:26
   1| commonValueNoOverride as empty; // error: string ~> empty
                               ^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- bar/test.js:2:1

Cannot cast `commonValueWithOverride` to empty because boolean [1] is incompatible with empty [2]. [incompatible-cast]

   bar/test.js:2:1
   2| commonValueWithOverride as empty; // error: boolean ~> empty
      ^^^^^^^^^^^^^^^^^^^^^^^

References:
   bar_lib.js:1:40
   1| declare const commonValueWithOverride: boolean;
                                             ^^^^^^^ [1]
   bar/test.js:2:28
   2| commonValueWithOverride as empty; // error: boolean ~> empty
                                 ^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- bar/test.js:3:1

Cannot resolve name `fooSpecific`. [cannot-resolve-name]

   3| fooSpecific; // error: not-bound
      ^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------------- bar/test.js:4:1

Cannot cast `barSpecific` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   bar/test.js:4:1
   4| barSpecific as empty; // error: string ~> empty
      ^^^^^^^^^^^

References:
   bar_lib.js:2:28
   2| declare const barSpecific: string;
                                 ^^^^^^ [1]
   bar/test.js:4:16
   4| barSpecific as empty; // error: string ~> empty
                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- common_test.js:1:1

Cannot cast `commonValueNoOverride` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   common_test.js:1:1
   1| commonValueNoOverride as empty; // error: string ~> empty
      ^^^^^^^^^^^^^^^^^^^^^

References:
   common_lib.js:1:38
   1| declare const commonValueNoOverride: string;
                                           ^^^^^^ [1]
   common_test.js:1:26
   1| commonValueNoOverride as empty; // error: string ~> empty
                               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- common_test.js:2:1

Cannot cast `commonValueWithOverride` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   common_test.js:2:1
   2| commonValueWithOverride as empty; // error: string ~> empty
      ^^^^^^^^^^^^^^^^^^^^^^^

References:
   common_lib2.js:1:40
   1| declare const commonValueWithOverride: string;
                                             ^^^^^^ [1]
   common_test.js:2:28
   2| commonValueWithOverride as empty; // error: string ~> empty
                                 ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- common_test.js:3:1

Cannot resolve name `fooSpecific`. [cannot-resolve-name]

   3| fooSpecific; // error: not-bound
      ^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- common_test.js:4:1

Cannot resolve name `barSpecific`. [cannot-resolve-name]

   4| barSpecific; // error: not-bound
      ^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------------- foo/test.js:1:1

Cannot cast `commonValueNoOverride` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   foo/test.js:1:1
   1| commonValueNoOverride as empty; // error: string ~> empty
      ^^^^^^^^^^^^^^^^^^^^^

References:
   common_lib.js:1:38
   1| declare const commonValueNoOverride: string;
                                           ^^^^^^ [1]
   foo/test.js:1:26
   1| commonValueNoOverride as empty; // error: string ~> empty
                               ^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- foo/test.js:2:1

Cannot cast `commonValueWithOverride` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   foo/test.js:2:1
   2| commonValueWithOverride as empty; // error: number ~> empty
      ^^^^^^^^^^^^^^^^^^^^^^^

References:
   foo_lib2.js:1:40
   1| declare const commonValueWithOverride: number;
                                             ^^^^^^ [1]
   foo/test.js:2:28
   2| commonValueWithOverride as empty; // error: number ~> empty
                                 ^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- foo/test.js:3:1

Cannot cast `fooSpecific` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   foo/test.js:3:1
   3| fooSpecific as empty; // error: number ~> empty
      ^^^^^^^^^^^

References:
   foo_lib.js:1:28
   1| declare const fooSpecific: typeof commonValueWithOverride;
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   foo/test.js:3:16
   3| fooSpecific as empty; // error: number ~> empty
                     ^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- foo/test.js:4:1

Cannot resolve name `barSpecific`. [cannot-resolve-name]

   4| barSpecific; // error: not-bound
      ^^^^^^^^^^^



Found 12 errors
